--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -7,12 +7,14 @@
   <body>
     <h1>Pessoas que já fiz amizade na Trybe</h1>
     <h2></h2>
-    <h3>
+    <h3></h3>
         <ul>
             <li>Antonio</li>
             <li>Sávio Silva</li>
             <li>Arthur Silva</li>
         </ul>
-    </h3>
+        <img src="https://global-uploads.webflow.com/5fba98ad987231cf0efa3d58/60f7114fc59b055b39fa73a2_mosaic-177-home-04.png" alt="Selfie no pc com a Trybe">
+        <img src="" alt="">
+    </h4>
   </body>
 </html>
