Adicao de foto interna

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -8,13 +8,14 @@
     <h1>Pessoas que já fiz amizade na Trybe</h1>
     <h2></h2>
     <h3></h3>
+    <h4>
         <ul>
             <li>Antonio</li>
             <li>Sávio Silva</li>
             <li>Arthur Silva</li>
         </ul>
-        <img src="https://global-uploads.webflow.com/5fba98ad987231cf0efa3d58/60f7114fc59b055b39fa73a2_mosaic-177-home-04.png" alt="Selfie no pc com a Trybe">
-        <img src="" alt="">
+        <img src="https://global-uploads.webflow.com/5fba98ad987231cf0efa3d58/60f7114fc59b055b39fa73a2_mosaic-177-home-04.png" alt="Selfie no pc com a Trybe"> <br>
+        <img src="IMG_20210608_184045.jpg" alt="Apenas o rosto" width="179px"> 
     </h4>
   </body>
 </html>
