finalizado todo o conteudo programatico

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -10,12 +10,16 @@
     <h3></h3>
     <h4>
         <ul>
-            <li>Antonio</li>
-            <li>Sávio Silva</li>
-            <li>Arthur Silva</li>
+            <li><a href="#Antonio">Antonio</a></li>
+            <li><a href="#Sávio">Sávio Silva</a></li>
+            <li><a href="#Arthur">Arthur Silva</a></li>
         </ul>
-        <img src="https://global-uploads.webflow.com/5fba98ad987231cf0efa3d58/60f7114fc59b055b39fa73a2_mosaic-177-home-04.png" alt="Selfie no pc com a Trybe"> <br>
-        <img src="IMG_20210608_184045.jpg" alt="Apenas o rosto" width="179px"> 
+        <img src="https://global-uploads.webflow.com/5fba98ad987231cf0efa3d58/60f7114fc59b055b39fa73a2_mosaic-177-home-04.png" alt="Selfie no pc com a Trybe">
+        <img src="IMG_20210608_184045.jpg" alt="Apenas o rosto" width="179px"> <br>
+        <a href="https://www.google.com.br/" target="_blank">Google</a>
+        <p id="Antonio">Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio Antonio</p>
+        <p id="Sávio">Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva Sávio Silva</p>
+        <p id="Arthur">Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva Arthur Silva</p>
     </h4>
   </body>
 </html>
