Atualizacao da pratica

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -7,18 +7,31 @@
 
       h1 {
         color: orange;
+        font-size: 65px;
+        font-family: sans-serif;
       }
 
       .list-p-style {
         background-color: purple;
       }
 
+      p {
+        font-weight: 600;
+        font-size: 3em;
+        line-height: 40px;
+        text-align: center;
+        text-decoration: underline;
+      }
 
-
+      body {
+        font-size: 16px;
+        font-style: italic;
+      }
+      
     </style>
   </head>
   <body>
-    <h1 width="65px">Exercícios 3.2</h1>
+    <h1>Exercícios 3.2</h1>
     <p class="list-p-style">Qual é a sua cor favorita?</p>
     <ul class="list-p-style">
       <li>Amarelo</li>
