Exercicio do dia 4 bloco 3

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -1,38 +1,69 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width"/>
+    <title>Fatos sobre o Stomatopoda</title>
   </head>
   <body>
     <header>
-      <h1>Hackathon Results</h1>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
-    <section>
-      <ul>
-        <li class="first">1º - Equipe 1</li>
-        <li class="second">2º - Equipe 2</li>
-        <li class="third">3º - Equipe 3</li>
-      </ul>
-    </section>
-    <section>
-      <h3>Premiação Primeiro Lugar:</h3>
-      <ul>
-        <li>| R$ 1000,00 por integrante da equipe |</li>
-        <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
-      </ul>
-      <h3>Premiação Segundo Lugar:</h3>
-      <ul>
-        <li>| R$ 600,00 por integrante da equipe |</li>
-        <li>| Participação no processo seletivo para o Bootcamp |</li>
-      </ul>
-      <h3>Premiação Terceiro Lugar:</h3>
-      <ul>
-        <li>| R$ 300,00 por integrante da equipe |</li>
-        <li>| Participação no processo seletivo para o Bootcamp |</li>
-      </ul>
-    </section>
+    <nav>
+        <ul>
+            <li>
+                <a class="menu" href="">Página Inicial</a>
+            </li>
+            <li>
+                <a class="menu" href="">Sobre</a>
+            </li>
+            <li>
+                <a class="menu" href="">Contato</a>
+            </li>            
+        </ul>
+    </nav>
+    <main>
+    <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <section>
+            <h2>Para começar:</h2>
+                <p>Stomatopoda (ou <em>Odontodactylus scyllarus</em>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+            <aside class="link-box" title="Classificação científica">
+                <a href="https://pt.wikipedia.org/wiki/Reino_(biologia)" title="Reino (Biologia)" target="_blank">Reino</a>
+                <a href="https://pt.wikipedia.org/wiki/Filo" title="Filo" target="_blank">Filo</a>
+                <a href="https://pt.wikipedia.org/wiki/Filo" title="Subfilo" target="_blank">Subfilo</a>                
+                <a href="https://pt.wikipedia.org/wiki/Classe_(biologia)" title="Classe (Biologia)" target="_blank">Classe</a>
+                <a href="https://pt.wikipedia.org/wiki/Classe_(biologia)" title="Subclasse" target="_blank">Subclasse</a>
+                <a href="https://pt.wikipedia.org/wiki/Ordem_(biologia)" title="Ordem" target="_blank">Ordem</a>
+            </aside>
+        </section>
+        <section title="Visao">
+            <h2>Visão</h2>
+                <h3>O mais complexo sistema de visão de cores do mundo animal</h3>
+                <img src="image/visao-stomatopoda.jpg" alt="Visão do Stomatopoda">
+                    <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam <strong>12 cores primárias</strong>, correspondentes aos 12 pigmentos distintos presentes em sua retina.<br>
+                    Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão dos estomatópodes possui doze cones sensíveis à luz e outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores polarizadas e imagens multiespectrais.<br>
+                    Como cada cone pode ver cerca de <strong>100 cores</strong>, os estomatópodes são capazes de ver <strong>1024 cores</strong>, ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou seja, 1 milhão de cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
+        </section>
+        <section title="Patas esmagadoras">
+            <h2>Patas esmagadoras</h2>
+                 <h3>As patas mais esmagadoras do oceano</h3>
+                    <img src="image/pata-esmagadora.jpeg" alt="Pata do Stomatopoda"><br>
+                    
+                    <p>As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro <strong>calibre .22</strong> (equivalente a <strong>720 km/h</strong>) e uma pressão de impacto de <strong>600 N/cm²</strong>. Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
+        </section>
+        <section title="Stomatopoda em ação">
+            <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" title="Video Stomatopoda" target="_blank">Stomatopoda em ação</a>
+        </section>
+    </article>
+    <footer>
+        <h4>Conteúdo compilado por Cleiton Ribeiro de Macedo, no ano de 2021. Estudante iniciante de Desenvolvimento Web</h4>
+    </footer>
+    </main>
   </body>
 </html>
+
+
+
+
+
