Atualizacao de erros

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width"/>
     <title>Fatos sobre o Stomatopoda</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -12,13 +13,13 @@
     <nav>
         <ul>
             <li>
-                <a class="menu" href="">Página Inicial</a>
+                <a class="menu" href="http://127.0.0.1:5500/index.html">Página Inicial</a>
             </li>
             <li>
-                <a class="menu" href="">Sobre</a>
+                <a class="menu" href="http://127.0.0.1:5500/index.html">Sobre</a>
             </li>
             <li>
-                <a class="menu" href="">Contato</a>
+                <a class="menu" href="http://127.0.0.1:5500/index.html">Contato</a>
             </li>            
         </ul>
     </nav>
@@ -29,18 +30,18 @@
             <h2>Para começar:</h2>
                 <p>Stomatopoda (ou <em>Odontodactylus scyllarus</em>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
             <aside class="link-box" title="Classificação científica">
-                <a href="https://pt.wikipedia.org/wiki/Reino_(biologia)" title="Reino (Biologia)" target="_blank">Reino</a>
-                <a href="https://pt.wikipedia.org/wiki/Filo" title="Filo" target="_blank">Filo</a>
-                <a href="https://pt.wikipedia.org/wiki/Filo" title="Subfilo" target="_blank">Subfilo</a>                
-                <a href="https://pt.wikipedia.org/wiki/Classe_(biologia)" title="Classe (Biologia)" target="_blank">Classe</a>
-                <a href="https://pt.wikipedia.org/wiki/Classe_(biologia)" title="Subclasse" target="_blank">Subclasse</a>
-                <a href="https://pt.wikipedia.org/wiki/Ordem_(biologia)" title="Ordem" target="_blank">Ordem</a>
+                <a href="https://pt.wikipedia.org/wiki/Reino_(biologia)" title="Reino (Biologia)" target="_blank" rel="noreferrer">Reino</a>
+                <a href="https://pt.wikipedia.org/wiki/Filo" title="Filo" target="_blank" rel="noreferrer">Filo</a>
+                <a href="https://pt.wikipedia.org/wiki/Filo" title="Subfilo" target="_blank" rel="noreferrer">Subfilo</a>                
+                <a href="https://pt.wikipedia.org/wiki/Classe_(biologia)" title="Classe (Biologia)" target="_blank" rel="noreferrer">Classe</a>
+                <a href="https://pt.wikipedia.org/wiki/Classe_(biologia)" title="Subclasse" target="_blank" rel="noreferrer">Subclasse</a>
+                <a href="https://pt.wikipedia.org/wiki/Ordem_(biologia)" title="Ordem" target="_blank" rel="noreferrer">Ordem</a>
             </aside>
         </section>
         <section title="Visao">
             <h2>Visão</h2>
                 <h3>O mais complexo sistema de visão de cores do mundo animal</h3>
-                <img src="image/visao-stomatopoda.jpg" alt="Visão do Stomatopoda">
+                <img class="img-artigo" src="image/visao-stomatopoda.jpg" alt="Visão do Stomatopoda">
                     <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam <strong>12 cores primárias</strong>, correspondentes aos 12 pigmentos distintos presentes em sua retina.<br>
                     Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão dos estomatópodes possui doze cones sensíveis à luz e outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores polarizadas e imagens multiespectrais.<br>
                     Como cada cone pode ver cerca de <strong>100 cores</strong>, os estomatópodes são capazes de ver <strong>1024 cores</strong>, ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou seja, 1 milhão de cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
@@ -48,12 +49,11 @@
         <section title="Patas esmagadoras">
             <h2>Patas esmagadoras</h2>
                  <h3>As patas mais esmagadoras do oceano</h3>
-                    <img src="image/pata-esmagadora.jpeg" alt="Pata do Stomatopoda"><br>
-                    
+                    <img class="img-artigo" src="image/pata-esmagadora.jpeg" alt="Pata do Stomatopoda"><br>                
                     <p>As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro <strong>calibre .22</strong> (equivalente a <strong>720 km/h</strong>) e uma pressão de impacto de <strong>600 N/cm²</strong>. Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
         </section>
         <section title="Stomatopoda em ação">
-            <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" title="Video Stomatopoda" target="_blank">Stomatopoda em ação</a>
+            <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" title="Video Stomatopoda" target="_blank" rel="noreferrer">Stomatopoda em ação</a>
         </section>
     </article>
     <footer>
@@ -62,8 +62,3 @@
     </main>
   </body>
 </html>
-
-
-
-
-
