--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/script.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/script.html
@@ -54,6 +54,10 @@
  Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
  Crie uma função que exiba o conteúdo de todas as tags <p> no console.
         */
+
+        document.getElementsByTagName('p')[0].innerText = 'Daqui a 2 anos vou estar juntando dinheiro para ir para o Canadá.';
+        document.getElementsByClassName('main-content')[0].style.backgroundColor = 'rgb(76,164,109)';
+
     </script>
   </body>
 </html>
