--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercises/5_4/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercises/5_4/index.html
@@ -1,18 +1,20 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header id="cabecalho"></header>
 <article class="article">
     <h1>Lorem Ipsum</h1>
         <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."<br>"Não há quem goste de dor, que a procure e a queira ter, simplesmente porque é dor..."</h2>
         <div>
-        <input type="text" id="input-background-color" placeholder="Insira uma cor de fundo">
-        <input type="text" id="input-text-color" placeholder="Insira uma cor de texto">
+        <input type="text" id="input-background-color" placeholder="Inserir cor de fundo">
+        <input type="text" id="input-text-color" placeholder="Inserir cor de texto">
+        <input type="text" id="input-text-size" placeholder="Inserir tamanho de fonte">
         </div>
         
             <h3>O que é o Lorem Ipsum?</h3>
@@ -29,7 +31,8 @@
 
             <h3>Onde posso arranjar algum?</h3>
                 <p>Existem muitas variações das passagens do Lorem Ipsum disponíveis, mas a maior parte sofreu alterações de alguma forma, pela injecção de humor, ou de palavras aleatórias que nem sequer parecem suficientemente credíveis. Se vai usar uma passagem do Lorem Ipsum, deve ter a certeza que não contém nada de embaraçoso escondido no meio do texto. Todos os geradores de Lorem Ipsum na Internet acabam por repetir porções de texto pré-definido, como necessário, fazendo com que este seja o primeiro verdadeiro gerador na Internet. Usa um dicionário de 200 palavras em Latim, combinado com uma dúzia de modelos de frases, para gerar Lorem Ipsum que pareçam razoáveis. Desta forma, o Lorem Ipsum gerado é sempre livre de repetição, ou de injecção humorística, etc.</p>
-    </article>
+    <footer id="rodape">Feito por um estudante de desenvolvimento web</footer>
+</article>
 </body>
 <script src="scripts.js"></script>
 </html>
